wip pivot to ghost items as indicators for nearby storage